Add correct logo and update tone of voice

--- a/iap/overview.mdx
+++ b/iap/overview.mdx
@@ -1,27 +1,25 @@
 ---
 title: 'Overview'
-description: 'Web checkout for mobile apps — keep ~94% of your revenue'
+description: 'Web checkout SDK for mobile apps'
 icon: 'credit-card'
 ---
 
-ZeroSettle In-App Purchase lets your mobile app accept payments via web checkout instead of Apple's StoreKit or Google Play Billing. You keep **~94%** of every transaction instead of 70%.
+ZeroSettle In-App Purchase is a web checkout SDK for mobile apps. It processes payments via Stripe instead of Apple's StoreKit or Google Play Billing, with ZeroSettle acting as the Merchant of Record.
 
-We act as the Merchant of Record — we handle payments, tax compliance, refunds, receipts, and liability. You add a few lines of code and start earning more. We support **Swift**, **Kotlin**, and **Flutter**, with React Native coming soon.
+The platform handles payments, tax compliance, refunds, receipts, and liability. The SDK supports **Swift**, **Kotlin**, and **Flutter**, with React Native coming soon.
 
-## Why?
-
-The math is simple:
+## Fee Comparison
 
 | | Apple/Google IAP | ZeroSettle IAP |
 | --- | --- | --- |
 | **Fee** | 30% (15% for small business) | 5% + 50¢ |
 | **You keep on a $9.99 sale** | $6.99 | ~$8.99 |
-| **Tax handling** | Apple/Google handles | We handle |
-| **Compliance** | Your responsibility | Our responsibility |
+| **Tax handling** | Apple/Google handles | ZeroSettle handles |
+| **Compliance** | Your responsibility | ZeroSettle's responsibility |
 | **Payouts** | 45+ days | [Instant via Stripe](https://connect.stripe.com/express_login) |
 | **Your Stripe account** | N/A | Use your own (BYOS) or ours (Managed) |
 
-Already on Stripe? With **Bring Your Own Stripe (BYOS)**, you connect your existing Stripe account and keep your products, prices, customers, and reporting. Charges go directly to your account — we add the Merchant of Record layer on top. Same 5% + 50¢ fee either way.
+With **Bring Your Own Stripe (BYOS)**, you connect your existing Stripe account and keep your products, prices, customers, and reporting. Charges go directly to your account — ZeroSettle adds the Merchant of Record layer on top. BYOS fee is 1%.
 
 ## Payment Modes
 
@@ -29,12 +27,12 @@ Choose the integration that fits your business:
 
 | | Managed (Default) | BYOS (Bring Your Own Stripe) |
 |---|---|---|
-| **Stripe account** | We create one for you (Express) | You connect your own (Standard) |
+| **Stripe account** | Created for you automatically (Express) | You connect your own (Standard) |
 | **Products & prices** | Auto-created by ZeroSettle | Your existing Stripe catalog |
 | **Revenue reporting** | Via ZeroSettle dashboard | Your Stripe dashboard + ZeroSettle |
 | **Customer data** | Managed by ZeroSettle | In your Stripe account |
 | **Setup time** | ~2 minutes | ~10 minutes (connect + map products) |
-| **Fee** | 5% + 50¢ | 5% + 50¢ |
+| **Fee** | 5% + 50¢ | 1% |
 
 Both modes share the same SDK integration — no code differences. The only setup difference is on the dashboard.
 
@@ -108,7 +106,7 @@ Opens the checkout URL in the user's default browser. The result returns to your
   The checkout mode is controlled by your remote config on the ZeroSettle dashboard. You can switch modes without an app update.
 </Tip>
 
-## What We Handle
+## What ZeroSettle Handles
 
 ### Payment Processing
 - Stripe-powered checkout
@@ -123,10 +121,10 @@ Opens the checkout URL in the user's default browser. The result returns to your
 - Tax remittance to authorities
 
 ### Merchant of Record
-- We're the legal seller
-- We handle disputes and chargebacks
-- We issue refunds
-- We send receipts
+- ZeroSettle is the legal seller
+- Disputes and chargebacks are handled automatically
+- Refunds are processed automatically
+- Receipts are sent automatically
 
 ### Apple Compliance
 - Compliant with Apple's external purchase guidelines
