--- a/iap/subscription-state.mdx
+++ b/iap/subscription-state.mdx
@@ -4,7 +4,7 @@ description: 'Determining the subscription status for a user'
 icon: 'arrows-rotate'
 ---
 
-ZeroSettle makes it easy to determine subscription status with the ZeroSettleKit SDK and REST API.
+You can determine subscription status using the ZeroSettleKit SDK or the REST API.
 
 ## Getting subscription status via the SDK
 
