--- a/index.mdx
+++ b/index.mdx
@@ -1,13 +1,13 @@
 ---
 title: "Welcome to ZeroSettle"
-description: "Keep more of your app revenue"
+description: "Web checkout SDK for mobile apps"
 ---
 
-ZeroSettle helps mobile developers keep more of what they earn. Instead of handing Apple or Google 30% on every transaction, route eligible purchases through our web checkout and pay just **5% + 50¢**.
+ZeroSettle is a Merchant of Record platform that processes mobile app payments via web checkout. Instead of routing purchases through Apple or Google's in-app purchase systems, your app uses ZeroSettle's SDK to accept payments directly — with Apple Pay and card support.
 
-We handle everything — payment processing, tax compliance, refunds, and receipts. You stay focused on building your app.
+The platform handles payment processing, tax compliance, refunds, and receipts. You integrate the SDK and handle purchase callbacks.
 
-**Already on Stripe?** Use [Bring Your Own Stripe (BYOS)](/iap/stripe-catalog) to connect your existing Stripe account. Keep your products, prices, reporting, and customer relationships — we add the MoR compliance layer on top.
+**Already on Stripe?** [Bring Your Own Stripe (BYOS)](/iap/stripe-catalog) lets you connect your existing Stripe account. Your products, prices, reporting, and customer relationships stay in your Stripe dashboard — ZeroSettle adds the MoR compliance layer on top.
 
 <CodeGroup>
 
@@ -76,7 +76,7 @@ final txn = await ZeroSettle.instance.presentPaymentSheet(
 
 ## How It Works
 
-Replace Apple's 30% cut with our 5% + 50¢ fee. ZeroSettle acts as your Merchant of Record — we handle the entire payment flow, tax remittance, and compliance so you don't have to.
+ZeroSettle acts as the Merchant of Record for your purchases — handling the payment flow, tax remittance, and compliance. The managed-mode fee is 5% + 50¢ per transaction.
 
 <Steps>
 <Step title="User Taps Purchase">
@@ -84,7 +84,7 @@ Replace Apple's 30% cut with our 5% + 50¢ fee. ZeroSettle acts as your Merchant
 </Step>
 
 <Step title="User Pays">
-  The user completes payment without leaving your app. We support Apple Pay, credit cards, and debit cards.
+  The user completes payment without leaving your app. Apple Pay, credit cards, and debit cards are all supported.
 </Step>
 
 <Step title="You Get a Callback">
@@ -96,12 +96,12 @@ Replace Apple's 30% cut with our 5% + 50¢ fee. ZeroSettle acts as your Merchant
 </Step>
 </Steps>
 
-### What We Handle
+### What ZeroSettle Handles
 
 - **Payment Processing** — Stripe-powered checkout with Apple Pay support
 - **Tax Compliance** — Automatic sales tax, VAT, and GST calculation and remittance
-- **Merchant of Record** — We're the seller of record, handling liability and disputes
-- **Refunds** — We handle refund requests and chargebacks
+- **Merchant of Record** — ZeroSettle is the seller of record, handling liability and disputes
+- **Refunds** — Refund requests and chargebacks are handled automatically
 - **Receipts** — Automatic email receipts to customers
 
 <Card title="Get Started with IAP" icon="rocket" href="/iap/installation">
@@ -114,10 +114,10 @@ Replace Apple's 30% cut with our 5% + 50¢ fee. ZeroSettle acts as your Merchant
 
 <CardGroup cols={2}>
   <Card title="Managed" icon="wand-magic-sparkles" href="/iap/dashboard#stripe-integration">
-    **Get started fast.** We create and manage your Stripe products automatically via Express onboarding. Best for apps starting fresh.
+    **Get started fast.** Stripe products are created and managed automatically via Express onboarding. Best for apps starting fresh.
   </Card>
   <Card title="Bring Your Own Stripe" icon="link" href="/iap/stripe-catalog">
-    **Already on Stripe?** Connect your existing account, keep your products and prices, and retain full control of your Stripe dashboard. Same 5% + 50¢ fee — revenue goes directly to your account.
+    **Already on Stripe?** Connect your existing account, keep your products and prices, and retain full control of your Stripe dashboard. 1% fee — revenue goes directly to your account.
   </Card>
 </CardGroup>
 
@@ -138,6 +138,6 @@ Replace Apple's 30% cut with our 5% + 50¢ fee. ZeroSettle acts as your Merchant
     icon="envelope"
     href="mailto:support@zerosettle.io"
   >
-    Get help from our team
+    Contact support
   </Card>
 </CardGroup>
